# freemap-outdoor-map

./: .env  .env.sample  .gitignore  Cargo.toml  Makefile  README.md  contours.nu  imposm3.config  limit-europe-buffered.geojson  limit-europe.geojson  limit-kst.geojson  mapping.yaml  out  shading.nu  stress.ts  taginfo.json
.cargo/: config.toml
etc/nginx/sites-available/: outdoor.tiles.freemap.sk
etc/system/systemd/: freemap-outdoor-map.service  imposm.service
sql/: additional.sql  country-names.sql  initial.sql
src/: main.rs
src/app/: app_state.rs  cli.rs  export.rs  mod.rs  render_worker_pool.rs  service.rs  start.rs  tile_coord.rs  tile_invalidation.rs  tile_processing_worker.rs  tile_processor.rs  tiles.rs
src/app/server/: app_state.rs  diagnostics_route.rs  export_route.rs  legend_route.rs  mod.rs  routes.rs  server.rs  tile_route.rs  wmts_route.rs
src/render/: categories.rs  collision.rs  colors.rs  coverage.rs  ctx.rs  feature.rs  image_format.rs  layer_render_error.rs  mod.rs  projectable.rs  render.rs  render_config.rs  render_request.rs  render_worker_pool.rs  renderer.rs  svg_repo.rs  xyz.rs
src/render/draw/: create_pango_layout.rs  font_options.rs  font_system.rs  hatch.rs  line_pattern.rs  markers_on_path.rs  mod.rs  offset_line.rs  path_geom.rs  smooth_line.rs  text.rs  text_on_line.rs
src/render/layers/: aerialway_names.rs  aerialways.rs  aeroways.rs  barrierways.rs  blur_edges.rs  bordered_area_names.rs  borders.rs  bridge_areas.rs  building_names.rs  buildings.rs  contours.rs  country_names.rs  custom.rs  cutlines.rs  decorations.rs  embankments.rs  feature_lines.rs  feature_lines_maskable.rs  feature_z_order.rs  features.rs  fixmes.rs  geonames.rs  highway_names.rs  hillshading.rs  hillshading_datasets.rs  hillshading_pool.rs  housenumbers.rs  landcover.rs  landcover_names.rs  landcover_z_order.rs  landuse.rs  layers.rs  locality_names.rs  military_areas.rs  mod.rs  national_park_names.rs  pipeline.rs  pipelines.rs  place_names.rs  poi_z_order.rs  (+19 more)
src/render/legend/: ctx_ext.rs  default.rs  feature_lines.rs  landcovers.rs  mapping.rs  mod.rs  pois.rs  roads.rs  shared.rs
