[package]
name = "freemap-outdoor-map"
version = "1.0.0"
edition = "2024"
publish = false

[dependencies]
image = { version = "0.25.10", default-features = false, features = [
  "jpeg",
  "png",
] }
librsvg = { version = "2.62.1" }
cairo-rs = { version = "0.22.0", features = ["png", "svg", "pdf"] }
cavalier_contours = { version = "0.7.0" }
colorsys = "0.7.3"
geo-postgis = "0.2.2"
pangocairo = "0.22.0"
pango = { version = "0.22.0", features = ["v1_56"] }
postgis = "0.9.0"
proj = { version = "=0.31.0", features = ["geo-types"] }
gio = "0.22.1"
xmltree = "0.12.0"
gdal = { version = "0.19.0", features = ["bindgen"] }
geo = { version = "=0.32.0", features = ["use-proj"] }
geojson = "1.0.0"
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }
deadpool-postgres = "0.14"
futures-util = "0.3"
regex = "1.12.3"
serde_json = "1.0.149"
tracy-client = { version = "0.18.4", default-features = false }
thiserror = "2.0.17"
axum = "0.8.8"
clap = { version = "4.6.0", features = ["derive", "env"] }
dotenvy = "0.15.7"
tokio = { version = "1.51.0", features = [
  "fs",
  "macros",
  "rt-multi-thread",
  "signal",
] }
tower = { version = "0.5.1", features = ["limit", "timeout"] }
tower-http = { version = "0.6.1", features = ["cors"] }
rand = "0.10.0"
serde = { version = "1.0.217", features = ["derive"] }
serde-saphyr = "0.0.23"
indexmap = { version = "2.13.1", features = ["serde"] }
notify = "8.2.0"
tokio-util = { version = "0.7.12", features = ["io"] }
sled = "0.34.7"
httpdate = "1.0.3"
enumset = "1.1.10"
