[package]
name = "freemap-outdoor-map"
version = "1.0.0"
edition = "2024"
publish = false

[lints.clippy]
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Domain-inherent noise: pixel/coordinate math does intentional lossy casts.
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
cast_lossless = "allow"
# Large rendering functions and short geometry/color variable names are intentional.
too_many_lines = "allow"
similar_names = "allow"
many_single_char_names = "allow"
# In-function `use` imports and by-value args (builder/thread ergonomics) are fine.
items_after_statements = "allow"
needless_pass_by_value = "allow"
# Forbid context-free `unwrap`; use `expect` to document the invariant instead.
unwrap_used = "warn"
# Guardrails: keep debug macros and placeholders out of commits.
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"

[dependencies]
image = { version = "0.25.10", default-features = false, features = [
  "jpeg",
  "png",
] }
librsvg = { version = "2.62.3" }
cairo-rs = { version = "0.22.0", features = ["pdf", "png", "svg"] }
cavalier_contours = { version = "0.7.0" }
colorsys = "0.7.3"
geo-postgis = "0.2.2"
postgis = "0.9.0"
proj = "0.31.0"
gio = "0.22.6"
xmltree = "0.12.0"
gdal = { version = "0.19.0", features = ["bindgen"] }
geo = { version = "0.33.1", features = ["use-proj"] }
geojson = "1.0.0"
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }
deadpool-postgres = "0.14"
futures-util = "0.3"
regex = "1.12.3"
serde_json = "1.0.150"
tracy-client = { version = "0.18.4", default-features = false }
thiserror = "2.0.18"
axum = "0.8.9"
clap = { version = "4.6.1", features = ["derive", "env"] }
dotenvy = "0.15.7"
tokio = { version = "1.52.3", features = [
  "fs",
  "macros",
  "rt-multi-thread",
  "signal",
] }
tower = { version = "0.5.3", features = ["limit", "timeout"] }
tower-http = { version = "0.6.11", features = ["cors"] }
rand = "0.10.1"
serde = { version = "1.0.228", features = ["derive"] }
serde-saphyr = "0.0.27"
indexmap = { version = "2.14.0", features = ["serde"] }
notify = "8.2.0"
tokio-util = { version = "0.7.18", features = ["io"] }
sled = "0.34.7"
httpdate = "1.0.3"
enumset = "1.1.13"
cosmic-text = { version = "0.19.0", features = [
  "fontconfig",
  "swash",
], default-features = false }
swash = "0.2.7"
